# atd-music-search

./: .gitignore  .pdm-python  .pre-commit-config.yaml  README.md  commitlint.config.js  pyproject.toml
config/: sample.json
config/api/: sample.json
config/cli/: sample.json
scripts/: run_cli.py  run_local_server.py  utils.py
src/atd_music_search_api/: api.py
src/atd_music_search_api/auth/: __init__.py  auth_bearer.py  auth_handler.py
src/atd_music_search_api/clients/: __init__.py  helpers.py
src/atd_music_search_api/clients/deezer/: __init__.py  client.py  types.py
src/atd_music_search_api/clients/genius/: __init__.py  client.py  types.py
src/atd_music_search_api/clients/spotify/: __init__.py  client.py  types.py
src/atd_music_search_api/clients/tidal/: __init__.py  client.py  types.py
src/atd_music_search_api/clients/youtube/: __init__.py  client.py  types.py
src/atd_music_search_api/config/: __init__.py  config.py  models.py
src/atd_music_search_api/routers/: models.py  search.py
src/atd_music_search_cli/: api.py  cli.py  helpers.py  types.py
src/atd_music_search_cli/config/: __init__.py  config.py  models.py
